sumo/tests/traci/ChangeTLValue/errors/UnsupportedVariable/testclient_out.traci
TraCITestClient output file. Date: Fri Feb 20 15:18:43 2009


-> Command sent: <SimulationStep>:
  TargetTime=48 PosFormat=1
.. Command acknowledged (1), [description: ]

-> Command sent: <SetValue>:
  domID=194 varID=255 objID=dummy
.. Answered with error to command (194), [description: Unsupported variable specified]

-> Command sent: <SimulationStep>:
  TargetTime=49 PosFormat=1
.. Command acknowledged (1), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: Goodbye]
